--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     margin: 40px 0;
   }
   .back-btn {
-    background: var(--accent);
+    background: 454545;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -80,12 +80,12 @@
     transition: background 0.3s;
   }
   .back-btn:hover {
-    background: #a93226;
-    }
+    background: #454545;
+  }
   </style>
 </head>
 <body>
-  <h1>部下との面談記録</h1>
+  <h1>1on1面談記録</h1>
 
   <div class="report">
     <div class="meta">
@@ -115,7 +115,7 @@
   
    <!-- 戻るボタン -->
   <div class="back-btn-wrap">
-    <button class="back-btn" onclick="history.back()">← 一つ前のページに戻る</button>
+    <button class="back-btn" onclick="history.back()">戻る</button>
   </div>
 </body>
 </html>
