--- a/index.html
+++ b/index.html
@@ -70,13 +70,14 @@
     margin: 40px 0;
   }
   .back-btn {
-    background: 454545;
+    background: #454545;
     color: #fff;
     border: none;
     padding: 10px 20px;
     font-size: 0.95rem;
     border-radius: 4px;
     cursor: pointer;
+    text-align: center;
     transition: background 0.3s;
   }
   .back-btn:hover {
