--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <h2>湯田 伊織</h2>
       <p>出版物のデジタル化に関して具体的な相談を受けた。本人は効率化への強い関心を持っており、改善案を積極的に検討している様子。今後、全社的な取り組みに繋げられる可能性あり。継続的にフォローする必要あり。</p>
 <h2>赤羽 義人</h2>
-      <p>特に問題なし。現在の職務において安定した成果を出しており、面談時も落ち着いた態度であった。今後も現行の業務を着実に遂行できると判断。</p>
+      <p>特に問題なし。現在の職務において安定した成果を出しており、面談時も落ち着いた態度であった。更新後のパスワードについて、「出身地の宮城県で活躍するプロ野球チームの鳥から取りました。」とのこと。必要書類の更新が必要。</p>
 <h2>下野 凛</h2>
       <p>朝に弱く、出勤対応が難しいことからリモートワークを増やしたい旨を希望。体調面や生活リズムへの配慮が必要と考えられるため、柔軟な勤務体制の検討が望ましい。本人の意欲は高く、環境を整えれば成果向上の可能性あり。</p>
 <h2>堀北 大樹</h2>
