--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <h2>福井 里帆</h2>
       <p>近々結婚の予定があり、今後の業務について要相談。本人は前向きな姿勢を示した。社内的には特段の問題はないが、生活の変化による勤務状況への影響については今後も注視が必要。めでたい話題であり、祝意を伝えた。</p>
 <h2>湯田 伊織</h2>
-      <p>出版物のデジタル化に関して具体的な相談を受けた。本人は効率化への強い関心を持っており、改善案を積極的に検討している様子。今後、全社的な取り組みに繋げられる可能性あり。継続的にフォローする必要あり。</p>
+      <p>出版物の「デジタル化」に関して具体的な相談を受けた。本人は効率化への強い関心を持っており、改善案を積極的に検討している様子。今後、全社的な取り組みに繋げられる可能性あり。しかし編集長の意向に反しており、実施は難しい。</p>
 <h2>赤羽 義人</h2>
       <p>特に問題なし。同じ宮城県出身ということで盛り上がった。現在の職務において安定した成果を出しており、面談時も落ち着いた態度であった。更新後のパスワードは地元のプロ野球チームにいる鳥の名前にしたとのこと。各書類の更新が必要。</p>
 <h2>下野 凛</h2>
