--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   
    <!-- 戻るボタン -->
   <div class="back-btn-wrap">
-    <button class="back-btn" onclick="history.back()">戻る（SCCがうまくいってない）</button>
+    <button class="back-btn" onclick="history.back()">戻る</button>
   </div>
 </body>
 </html>
