--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
   <div class="report">
     <div class="meta">
-      記録者：大渕 航也（編集部）<br>
+      記録者：立城 順平（編集部）<br>
       記録日：2025年5月16日
     </div>
 <div class="intro">
