--- a/index.html
+++ b/index.html
@@ -313,8 +313,11 @@
       }
 
       .back-btn {
-        padding: 10px 24px;
-        font-size: 0.95rem;
+        width: 160px;
+        padding: 8px 16px;
+        font-size: 0.9em;
+        margin-top: 1.5em;
+      }
       }
     }
 
